<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/papel_nuvens">

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="98dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/cancelar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:labelFor="@id/editTitulo"
            android:text="@string/titulo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTitulo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            android:labelFor="@id/textTitulo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="154dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="29dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:labelFor="@id/editDescricao"
            android:text="@string/descri_o"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editDescricao"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPersonName"
            android:labelFor="@id/textDescricao" />
    </LinearLayout>

</RelativeLayout>